jenkins-eks-instance.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Create an EC2 instance with Jenkins, AWS CLI, and CloudFormation role

Parameters:
  InstanceType:
    Description: EC2 instance type
    Type: String
    Default: t3.medium
    AllowedValues:
      - t2.micro
      - t2.medium
      - t3.medium
      - t2.large
    ConstraintDescription: Must be a valid EC2 instance type.

  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: Must be the name of an existing EC2 KeyPair.
    Default: DevOps_key_Pair

  VpcId:
    Description: VPC ID
    Type: AWS::EC2::VPC::Id
    Default: vpc-0d9fab734b1a6143a

  SubnetId:
    Description: Subnet ID
    Type: AWS::EC2::Subnet::Id
    Default: subnet-0b455b136100c5753

Resources:
  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH and HTTP access
      SecurityGroupIngress:
        # Replace with your authorized IP ranges for production
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
      VpcId: !Ref VpcId

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      ImageId: ami-07d9b9ddc6cd8dd30
      SecurityGroupIds:
        - !GetAtt EC2SecurityGroup.GroupId
      SubnetId: !Ref SubnetId
      IamInstanceProfile: JenkinsEKSRole # Provide the IAM instance profile
      UserData:
        Fn::Base64: |
          #!/bin/bash
          apt update
          apt install fontconfig openjdk-17-jre -y
          wget -O /usr/share/keyrings/jenkins-keyring.asc \
            https://pkg.jenkins.io/debian-stable/jenkins.io-2023.key
          echo deb [signed-by=/usr/share/keyrings/jenkins-keyring.asc] \
            https://pkg.jenkins.io/debian-stable binary/ | sudo tee \
            /etc/apt/sources.list.d/jenkins.list > /dev/null
          apt-get update
          apt-get install jenkins -y
          # Optimized AWS CLI installation
          apt install -y unzip python3-pip
          pip3 install awscli
          sudo aws configure
      
Outputs:

  InstanceId:
    Description: The Instance ID of the newly created EC2 instance
    Value: !Ref EC2Instance

  PublicDnsName:
    Description: Public DNSName of the newly created EC2 instance
    Value: !GetAtt EC2Instance.PublicDnsName

  PublicIp:
    Description: Public IP address of the newly created EC2 instance
    Value: !GetAtt EC2Instance.PublicIp
